[package]
name = "rate_limiter"
version = "0.1.0"
description = "Fast in-memory rate-limiter"
authors = ["Vedran Vucetic <vedran.vucetic@gmail.com>"]
edition = "2018"
readme = "README.md"
include = ["README.md"]
repository = "https://github.com/vvucetic/rate-limiter"

[features]
default = ["async"]

async = ["tokio"]

[dependencies]
tokio = { version = "0.2", features = ["sync", "rt-threaded", "macros"], optional = true }